--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
 <body>
   <button onclick="main()">Run</button>
   <pre></pre>
-  <script src="./dist/index.js"></script>
+  <script type="module" src="./dist/index.js"></script>
 </body>
 </html>
