--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JS Reactivity Benchmark</title>
-  <link rel="shortcut icon" href="favicon.png" type="image/png">
-</head>
-<body>
-  <button onclick="main()">Run</button>
-  <pre></pre>
-  <script type="module" src="./dist/index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JS Reactivity Benchmark</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/png" />
+  </head>
+  <body>
+    <button onclick="main()">Run</button>
+    <pre></pre>
+    <script type="module" src="./dist/index.js"></script>
+  </body>
 </html>
