--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -9,6 +9,6 @@
   <body>
     <button onclick="main()">Run</button>
     <pre></pre>
-    <script type="module" src="./dist/index.js"></script>
+    <script type="module" src="./src/index.ts"></script>
   </body>
 </html>
