--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <button onclick="main()">Run</button>
+    <button onclick="graph()">Graph results</button>
     <pre></pre>
     <script type="module" src="./src/index.ts"></script>
   </body>
